add more translations

--- a/src/main/resources/bundles/Bundle_en.properties
+++ b/src/main/resources/bundles/Bundle_en.properties
@@ -2,6 +2,24 @@ saved = saved
 modified = modified
 failed.modified = failed modified
 failed.saved = failed saved
+# menu
+menu.file.text = File
+menu.language.text = Language
+# menu items
+menu.item.openfiles.text = Open files...
+menu.item.openfolder.text = Open folder...
+# labels
+label.choosealphabet.text = Alphabet:
+label.choosepattern.text = Pattern:
+label.console.text = Console:
+# radio buttons
+radio.button.cyrillic.text = Cyrillic
+radio.button.latin.text = Latin
+# buttons
+button.generate.text = Generate tags
+button.save.text = Save files
+button.stop.text = Stop
+# columns in table
 table.column.filepath.text = File path
 table.column.artist.text = Artist
 table.column.year.text = Year
