--- a/src/main/resources/bundles/Bundle_rs.properties
+++ b/src/main/resources/bundles/Bundle_rs.properties
@@ -2,9 +2,27 @@ saved = sacuvano
 modified = modifikovano
 failed.modified = neuspesno modifikovano
 failed.saved = neuspesno sacuvano
-table.column.file.path.text = Datoteka
+# menu
+menu.file.text = File
+menu.language.text = Jezik
+# menu items
+menu.item.openfiles.text = Otvori datoteke...
+menu.item.openfolder.text = Otvori direktorijum...
+# labels
+label.choosealphabet.text = Alfabet:
+label.choosepattern.text = Šablon:
+label.console.text = Konzola:
+# radio buttons
+radio.button.cyrillic.text = Æirilica
+radio.button.latin.text = Latinica
+# buttons
+button.generate.text = Generiši tagove
+button.save.text = Saèuvaj fajlove
+button.stop.text = Zaustavi
+# columns in table
+table.column.filepath.text = Datoteka
 table.column.artist.text = Autor
 table.column.year.text = Godina
 table.column.title.text = Pesma
-table.column.pattern.text = Sablon
+table.column.pattern.text = Šablon
 table.column.state.text = Stanje
