add chosing language in menu bar

--- a/src/main/resources/bundles/Bundle_en.properties
+++ b/src/main/resources/bundles/Bundle_en.properties
@@ -8,6 +8,8 @@ menu.language.text = Language
 # menu items
 menu.item.openfiles.text = Open files...
 menu.item.openfolder.text = Open folder...
+menu.item.english.text = English
+menu.item.serbian.text = Serbian
 # labels
 label.choosealphabet.text = Alphabet:
 label.choosepattern.text = Pattern:
