--- a/src/main/resources/bundles/Bundle_rs.properties
+++ b/src/main/resources/bundles/Bundle_rs.properties
@@ -8,8 +8,10 @@ menu.language.text = Jezik
 # menu items
 menu.item.openfiles.text = Otvori datoteke...
 menu.item.openfolder.text = Otvori direktorijum...
+menu.item.english.text = Engleski
+menu.item.serbian.text = Srpski
 # labels
-label.choosealphabet.text = Alfabet:
+label.choosealphabet.text = Pismo:
 label.choosepattern.text = Šablon:
 label.console.text = Konzola:
 # radio buttons
