add clear console button

--- a/src/main/resources/bundles/Bundle_en.properties
+++ b/src/main/resources/bundles/Bundle_en.properties
@@ -21,6 +21,7 @@ radio.button.latin.text = Latin
 button.generate.text = Generate tags
 button.save.text = Save files
 button.stop.text = Stop
+button.clearconsole.tooltip = Clear console
 # columns in table
 table.column.filepath.text = File path
 table.column.artist.text = Artist
