--- a/src/main/resources/bundles/Bundle_rs.properties
+++ b/src/main/resources/bundles/Bundle_rs.properties
@@ -21,6 +21,7 @@ radio.button.latin.text = Latinica
 button.generate.text = Generiši tagove
 button.save.text = Saèuvaj fajlove
 button.stop.text = Zaustavi
+button.clearconsole.tooltip = Oèisti konzolu
 # columns in table
 table.column.filepath.text = Datoteka
 table.column.artist.text = Autor
