save user sorting column

--- a/src/main/resources/bundles/Bundle_rs.properties
+++ b/src/main/resources/bundles/Bundle_rs.properties
@@ -18,10 +18,12 @@ label.console.text = Konzola:
 radio.button.cyrillic.text = Æirilica
 radio.button.latin.text = Latinica
 # buttons
-button.generate.text = Generiši tagove
-button.save.text = Saèuvaj fajlove
+button.generate.text = Generiši
+button.save.text = Saèuvaj
 button.stop.text = Zaustavi
 button.clearconsole.tooltip = Oèisti konzolu
+# table
+table.placeholder.text = Nema uèitanih datoteka
 # columns in table
 table.column.filepath.text = Datoteka
 table.column.artist.text = Autor
