--- a/src/main/resources/bundles/Bundle_en.properties
+++ b/src/main/resources/bundles/Bundle_en.properties
@@ -22,6 +22,8 @@ button.generate.text = Generate tags
 button.save.text = Save files
 button.stop.text = Stop
 button.clearconsole.tooltip = Clear console
+# table
+table.placeholder.text = There is no imported files
 # columns in table
 table.column.filepath.text = File path
 table.column.artist.text = Artist
