add documentation for MainScreenController

--- a/src/main/resources/bundles/Bundle_en.properties
+++ b/src/main/resources/bundles/Bundle_en.properties
@@ -31,3 +31,12 @@ table.column.year.text = Year
 table.column.title.text = Title
 table.column.pattern.text = Pattern
 table.column.state.text = State
+# error messages
+files.cannot.be.imported = This files cannot be imported:
+files.cannot.be.generated = Tags for this files cannot be generated:
+files.cannot.be.saved = This files cannot be saved:
+# info messages
+files.imported.successfully = Files imported successfully.
+files.generated.successfully = Files generated successfully.
+files.removed.successfully = Files removed successfully.
+files.saved.successfully = Files saved successfully.
