--- a/src/main/resources/bundles/Bundle_rs.properties
+++ b/src/main/resources/bundles/Bundle_rs.properties
@@ -31,3 +31,12 @@ table.column.year.text = Godina
 table.column.title.text = Pesma
 table.column.pattern.text = Šablon
 table.column.state.text = Stanje
+# error messages
+files.cannot.be.imported = This files cannot be imported:
+files.cannot.be.generated = Tags for this files cannot be generated:
+files.cannot.be.saved = This files cannot be saved:
+# info messages
+files.imported.successfully = Uspešno uèitane datoteke.
+files.generated.successfully = Uspešno generisani tagovi.
+files.removed.successfully = Uspešno uklonjene datoteke.
+files.saved.successfully = Uspešno saèuvane datoteke.
