add more documentatin. add progrss for on open files and open folder

--- a/src/main/resources/bundles/Bundle_rs.properties
+++ b/src/main/resources/bundles/Bundle_rs.properties
@@ -25,7 +25,7 @@ button.clearconsole.tooltip = Oèisti konzolu
 # table
 table.placeholder.text = Nema uèitanih datoteka
 # columns in table
-table.column.filepath.text = Datoteka
+table.column.filename.text = Datoteka
 table.column.artist.text = Autor
 table.column.year.text = Godina
 table.column.title.text = Pesma
