--- a/src/main/resources/bundles/Bundle_en.properties
+++ b/src/main/resources/bundles/Bundle_en.properties
@@ -25,7 +25,7 @@ button.clearconsole.tooltip = Clear console
 # table
 table.placeholder.text = There is no imported files
 # columns in table
-table.column.filepath.text = File path
+table.column.filename.text = File name
 table.column.artist.text = Artist
 table.column.year.text = Year
 table.column.title.text = Title
