--- a/src/main/resources/bundles/Bundle_rs.properties
+++ b/src/main/resources/bundles/Bundle_rs.properties
@@ -32,9 +32,9 @@ table.column.title.text = Pesma
 table.column.pattern.text = Šablon
 table.column.state.text = Stanje
 # error messages
-files.cannot.be.imported = This files cannot be imported:
-files.cannot.be.generated = Tags for this files cannot be generated:
-files.cannot.be.saved = This files cannot be saved:
+files.cannot.be.imported = Ove datoteke ne mogu da se uèitaju:
+files.cannot.be.generated = Tagovi ne mogu biti generisani za:
+files.cannot.be.saved = Ove datoteke ne mogu biti saèuvane:
 # info messages
 files.imported.successfully = Uspešno uèitane datoteke.
 files.generated.successfully = Uspešno generisani tagovi.
