start adding about dialog

--- a/src/main/resources/bundles/Bundle_en.properties
+++ b/src/main/resources/bundles/Bundle_en.properties
@@ -2,14 +2,18 @@ saved = saved
 modified = modified
 failed.modified = failed modified
 failed.saved = failed saved
+# about dialog
+dialog.about.title = About
 # menu
 menu.file.text = File
 menu.language.text = Language
+menu.help.text = Help
 # menu items
 menu.item.openfiles.text = Open files...
 menu.item.openfolder.text = Open folder...
 menu.item.english.text = English
 menu.item.serbian.text = Serbian
+menu.item.about.text = About...
 # labels
 label.choosealphabet.text = Alphabet:
 label.choosepattern.text = Pattern:
