--- a/src/main/resources/bundles/Bundle_rs.properties
+++ b/src/main/resources/bundles/Bundle_rs.properties
@@ -5,11 +5,15 @@ failed.saved = neuspesno sacuvano
 # menu
 menu.file.text = File
 menu.language.text = Jezik
+menu.help.text = Pomoæ
+# about dialog
+dialog.about.title = O softveru
 # menu items
 menu.item.openfiles.text = Otvori datoteke...
 menu.item.openfolder.text = Otvori direktorijum...
 menu.item.english.text = Engleski
 menu.item.serbian.text = Srpski
+menu.item.about.text = O softveru...
 # labels
 label.choosealphabet.text = Pismo:
 label.choosepattern.text = Šablon:
