add about dialog

--- a/src/main/resources/bundles/Bundle_rs.properties
+++ b/src/main/resources/bundles/Bundle_rs.properties
@@ -8,6 +8,9 @@ menu.language.text = Jezik
 menu.help.text = Pomoæ
 # about dialog
 dialog.about.title = O softveru
+dialog.about.appname.text = Mp3 Tag Generator
+dialog.about.appversion.text = Verzija 2018.03.23
+dialog.about.copyright.text = Copyright© NikMal 2018
 # menu items
 menu.item.openfiles.text = Otvori datoteke...
 menu.item.openfolder.text = Otvori direktorijum...
