enable localiyation on about dialog

--- a/resources/bundles/Bundle_en.properties
+++ b/resources/bundles/Bundle_en.properties
@@ -5,7 +5,7 @@ failed.saved = failed saved
 # about dialog
 dialog.about.title = About
 dialog.about.appname.text = Mp3 Tag Generator
-dialog.about.appversion.text = Version 2018.03.23
+dialog.about.appversion.text = Version
 dialog.about.copyright.text = Copyright© NikMal 2018
 # menu
 menu.file.text = File
