--- a/resources/bundles/Bundle_rs.properties
+++ b/resources/bundles/Bundle_rs.properties
@@ -9,7 +9,7 @@ menu.help.text = Pomoæ
 # about dialog
 dialog.about.title = O softveru
 dialog.about.appname.text = Mp3 Tag Generator
-dialog.about.appversion.text = Verzija 2018.03.23
+dialog.about.appversion.text = Verzija
 dialog.about.copyright.text = Copyright© NikMal 2018
 # menu items
 menu.item.openfiles.text = Otvori datoteke...
